<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyAsapNewVersion</string>
    <string name="auto_connect">Auto-connecté</string>
    <string name="connected">Connecté</string>
    <string name="disconnected">Déconnecté</string>

    <!-- Pour AccessoryDetailActivity -->
    <string name="device_name_label">Nom de l’appareil détecté</string>
    <string name="device_name_hint">Entrez un nom personnalisé</string>
    <string name="auto_connect_label">Connexion automatique</string>
    <string name="battery_level_unknown">Batterie actuelle : Inconnue</string>
    <string name="battery_level">Batterie actuelle : %1$d%%</string>
    <string name="save_button">Enregistrer</string>
    <string name="forget_button">Oublier l’appareil</string>
    <string name="associate_button">Associer l’appareil</string>
    <string name="rssi_format">%1$d dBm</string>
    <string name="device_name_with_value">%1$s : %2$s</string>
    <string name="error_no_mac">Adresse MAC absente</string>
    <string name="error_no_bluetooth_permission">Permission Bluetooth manquante</string>
    <string name="changes_saved">Modifications enregistrées</string>

</resources>